--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -31,8 +31,8 @@ init_config:
   # Delay before starting polling events after starting
   # default_initial_delay_seconds: 600
 
-  # Fields to uniquely identify a record. Use fields_for_identification: None to use the whole record.
-  # default_fields_for_identification:
+  # Fields to uniquely identify a record. Use unique_key_fields: None to use the whole record.
+  # default_unique_key_fields:
   #   - "_bkt"
   #   - "_cd"
 
@@ -57,7 +57,7 @@ instances:
         # initial_history_time_seconds: 0
         # max_restart_history_seconds: 86400
         # max_query_chunk_seconds: 3600
-        # fields_for_identification:
+        # unique_key_fields:
         #   - "_bkt"
         #   - "_cd"
 
