--- a/conf.d/ucmdb_file.yaml.example
+++ b/conf.d/ucmdb_file.yaml.example
@@ -6,7 +6,7 @@ instances:
   # Root folder where tql query results are stored
   # the folder could have two subfolders "full" and "increment"
   # - "full" contains snapshots
-  # - "increment" should get updates
+  # - "increment" contains snapshot updates
   - location: "/path/to/folder"
     # topology synchronization interval in seconds, default is 0, meaning sync is done on each check run
     # file_polling_interval: 0
