--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -76,16 +76,5 @@ priority=999
 startsecs=3
 user=sts-agent
 
-[program:process-agent]
-command=/opt/stackstate-agent/bin/process-agent
-stdout_logfile=NONE
-stderr_logfile=NONE
-startsecs=5
-startretries=3
-priority=998
-user=sts-agent
-autorestart=unexpected
-exitcodes=0
-
 [group:stackstate-agent]
-programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat,trace-agent
+programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat
