rotate connbeat stdout and stderr logs kept by supervisord
removing rediret_stderr=true to allow separate log files for stdout and stderr

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -61,7 +61,10 @@ user=sts-agent
 command=/opt/stackstate-agent/bin/connbeat.sh
 stdout_logfile=/var/log/stackstate/connbeat.out
 stderr_logfile=/var/log/stackstate/connbeat.err
-redirect_stderr=true
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups = 10
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups = 10
 priority=999
 startsecs=3
 user=sts-agent
