--- a/packaging/datadog-agent/source/supervisor.conf
+++ b/packaging/datadog-agent/source/supervisor.conf
@@ -1,6 +1,7 @@
 [supervisord]
 logfile = logs/supervisord.log
 logfile_maxbytes = 50MB
+logfile_backups = 10
 loglevel = info
 nodaemon = true
 identifier = supervisord
@@ -20,6 +21,10 @@ serverurl = unix://%(here)s/../run/agent-supervisor.sock
 [program:collector]
 command=python agent/agent.py foreground --use-local-forwarder
 redirect_stderr=true
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups = 10
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups = 10
 priority=999
 startsecs=2
 environment=LANG=POSIX,PYTHONPATH='agent/checks/libs:$PYTHONPATH'
@@ -27,18 +32,30 @@ environment=LANG=POSIX,PYTHONPATH='agent/checks/libs:$PYTHONPATH'
 [program:forwarder]
 command=python agent/stsagent.py --use_simple_http_client=1
 redirect_stderr=true
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups = 10
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups = 10
 priority=998
 startsecs=3
 
 [program:stsstatsd]
 command=python agent/stsstatsd.py --use-local-forwarder
 redirect_stderr=true
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups = 10
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups = 10
 priority=998
 startsecs=3
 
 [program:jmxfetch]
 command=python agent/jmxfetch.py
 redirect_stderr=true
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups = 10
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups = 10
 priority=999
 startsecs=3
 
