--- a/connbeat.yml
+++ b/connbeat.yml
@@ -25,3 +25,23 @@ output:
 
   #console:
   #  pretty: false
+
+
+# Logging to rotating files files. Set logging.to_files to false to disable logging to
+# files.
+logging.to_files: true
+logging.files:
+  # Configure the path where the logs are written. The default is the logs directory
+  # under the home path (the binary location).
+  #path: /var/log/connbeat
+
+  # The name of the files where the logs are written to.
+  #name: connbeat
+
+  # Configure log file size limit. If limit is reached, log file will be
+  # automatically rotated
+  rotateeverybytes: 10485760 # = 10MB
+
+  # Number of rotated log files to keep. Oldest files will be deleted first.
+  keepfiles: 2
+
