log all stdout and stderr limited to 1MB * 2 files to keep

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -22,8 +22,10 @@ environment=PYTHONPATH=/opt/stackstate-agent/agent,LANG=POSIX
 
 [program:collector]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/agent.py foreground --use-local-forwarder
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=5
 startretries=3
@@ -32,8 +34,10 @@ environment=PYTHONPATH='/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/
 
 [program:forwarder]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsagent.py
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 startsecs=5
 startretries=3
 priority=998
@@ -41,8 +45,10 @@ user=sts-agent
 
 [program:stsstatsd]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 startsecs=5
 startretries=3
 priority=998
@@ -50,18 +56,20 @@ user=sts-agent
 
 [program:jmxfetch]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/jmxfetch.py
-stdout_logfile=NONE
-stderr_logfile=NONE
-redirect_stderr=true
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=3
 user=sts-agent
 
 [program:go-metro]
 command=/opt/stackstate-agent/bin/go-metro -cfg="/etc/sts-agent/conf.d/go-metro.yaml"
-stdout_logfile=NONE
-stderr_logfile=NONE
-redirect_stderr=true
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=2
 startretries=2
@@ -71,9 +79,9 @@ user=sts-agent
 command=/opt/stackstate-agent/bin/connbeat.sh
 stdout_logfile=/var/log/stackstate/connbeat.out
 stderr_logfile=/var/log/stackstate/connbeat.err
-stdout_logfile_maxbytes=5MB
+stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
-stderr_logfile_maxbytes=5MB
+stderr_logfile_maxbytes=1MB
 stderr_logfile_backups = 1
 priority=999
 startsecs=3
