naming all log files explicitly

--- a/packaging/datadog-agent/source/supervisor.conf
+++ b/packaging/datadog-agent/source/supervisor.conf
@@ -20,6 +20,8 @@ serverurl = unix://%(here)s/../run/agent-supervisor.sock
 
 [program:collector]
 command=python agent/agent.py foreground --use-local-forwarder
+stdout_logfile=/var/log/stackstate/collector.out
+stderr_logfile=/var/log/stackstate/collector.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -30,6 +32,8 @@ environment=LANG=POSIX,PYTHONPATH='agent/checks/libs:$PYTHONPATH'
 
 [program:forwarder]
 command=python agent/stsagent.py --use_simple_http_client=1
+stdout_logfile=/var/log/stackstate/forwarder.out
+stderr_logfile=/var/log/stackstate/fowarder.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -39,6 +43,8 @@ startsecs=3
 
 [program:stsstatsd]
 command=python agent/stsstatsd.py --use-local-forwarder
+stdout_logfile=/var/log/stackstate/stsstatsd.out
+stderr_logfile=/var/log/stackstate/stsstatsd.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -48,6 +54,8 @@ startsecs=3
 
 [program:jmxfetch]
 command=python agent/jmxfetch.py
+stdout_logfile=/var/log/stackstate/jmxfetch.out
+stderr_logfile=/var/log/stackstate/jmxfetch.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
