--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -22,6 +22,8 @@ environment=PYTHONPATH=/opt/stackstate-agent/agent,LANG=POSIX
 
 [program:collector]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/agent.py foreground --use-local-forwarder
+stdout_logfile=/var/log/stackstate/collector.out
+stderr_logfile=/var/log/stackstate/collector.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -34,6 +36,8 @@ environment=PYTHONPATH='/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/
 
 [program:forwarder]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsagent.py
+stdout_logfile=/var/log/stackstate/forwarder.out
+stderr_logfile=/var/log/stackstate/fowarder.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -45,6 +49,8 @@ user=sts-agent
 
 [program:stsstatsd]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
+stdout_logfile=/var/log/stackstate/stsstatsd.out
+stderr_logfile=/var/log/stackstate/stsstatsd.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -56,6 +62,8 @@ user=sts-agent
 
 [program:jmxfetch]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/jmxfetch.py
+stdout_logfile=/var/log/stackstate/jmxfetch.out
+stderr_logfile=/var/log/stackstate/jmxfetch.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
@@ -66,6 +74,8 @@ user=sts-agent
 
 [program:go-metro]
 command=/opt/stackstate-agent/bin/go-metro -cfg="/etc/sts-agent/conf.d/go-metro.yaml"
+stdout_logfile=/var/log/stackstate/go-metro.out
+stderr_logfile=/var/log/stackstate/go-metro.err
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups = 1
 stderr_logfile_maxbytes=1MB
