fixed log files for supervisor_32

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -13,17 +13,21 @@ minfds = 1024
 minprocs = 200
 loglevel = info
 logfile = /var/log/stackstate/supervisord.log
-logfile_maxbytes = 50MB
+logfile_maxbytes = 10MB
 nodaemon = false
 pidfile = /opt/stackstate-agent/run/stackstate-supervisord.pid
-logfile_backups = 10
+logfile_backups = 1
 user=sts-agent
 environment=PYTHONPATH=/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/checks,LANG=POSIX
 
 [program:collector]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/agent.py foreground --use-local-forwarder
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile=/var/log/stackstate/collector.out
+stderr_logfile=/var/log/stackstate/collector.err
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=5
 startretries=3
@@ -32,8 +36,12 @@ environment=PYTHONPATH='/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/
 
 [program:forwarder]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsagent.py
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile=/var/log/stackstate/forwarder.out
+stderr_logfile=/var/log/stackstate/fowarder.err
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 startsecs=5
 startretries=3
 priority=998
@@ -41,8 +49,12 @@ user=sts-agent
 
 [program:stsstatsd]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile=/var/log/stackstate/stsstatsd.out
+stderr_logfile=/var/log/stackstate/stsstatsd.err
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 startsecs=5
 startretries=3
 priority=998
@@ -50,9 +62,12 @@ user=sts-agent
 
 [program:jmxfetch]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/jmxfetch.py
-stdout_logfile=NONE
-stderr_logfile=NONE
-redirect_stderr=true
+stdout_logfile=/var/log/stackstate/jmxfetch.out
+stderr_logfile=/var/log/stackstate/jmxfetch.err
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=3
 user=sts-agent
@@ -61,10 +76,10 @@ user=sts-agent
 command=/opt/stackstate-agent/bin/connbeat.sh
 stdout_logfile=/var/log/stackstate/connbeat.out
 stderr_logfile=/var/log/stackstate/connbeat.err
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups = 10
-stderr_logfile_maxbytes=50MB
-stderr_logfile_backups = 10
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
 priority=999
 startsecs=3
 user=sts-agent
