By default don't log to syslog

--- a/stackstate.conf.example
+++ b/stackstate.conf.example
@@ -263,6 +263,6 @@ gce_updated_hostname: yes
 # if syslog is enabled but a host and port are not set, a local domain socket
 # connection will be attempted
 #
-# log_to_syslog: yes
+# log_to_syslog: no
 # syslog_host:
 # syslog_port:
