--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ branches:
   only:
     - master
     - /^\d+\.\d+\.x$/ # release forked patches branch
+    - splunk_reduce_logins
 
 language: python
 python:
