chore(trace-agent) do not start trace-agent automatically

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -112,4 +112,4 @@ user=sts-agent
 
 
 [group:stackstate-agent]
-programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat,trace-agent
+programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat
