improve(trace-agent) added sts traceagent startup to supervisord script (#65)
* improve(trace-agent) added sts traceagent startup to supervisord script

* chore(trace-agent) do not start trace-agent automatically

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -97,5 +97,19 @@ priority=999
 startsecs=3
 user=sts-agent
 
+[program:trace-agent]
+command=/opt/stackstate-agent/bin/trace-agent                                           
+stdout_logfile=/var/log/stackstate/trace-agent.out
+stderr_logfile=/var/log/stackstate/trace-agent.err
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups = 1
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups = 1
+priority=999
+startsecs=2
+startretries=2
+user=sts-agent
+
+
 [group:stackstate-agent]
 programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat
