--- a/stackstate.conf.example
+++ b/stackstate.conf.example
@@ -266,3 +266,39 @@ gce_updated_hostname: yes
 # log_to_syslog: no
 # syslog_host:
 # syslog_port:
+
+# ========================================================================== #
+# Tracing
+# ========================================================================== #
+
+# [trace.config]
+
+# Configure a non-default environment for the traces reported from this Agent
+# env: none
+
+# File destination of trace-agent logs
+# log_file: /var/log/stackstate/trace-agent.log
+
+# [trace.receiver]
+
+# Port that the trace-agent will listen
+# receiver_port: 8126
+
+# [trace.sampler]
+
+# Extra global sample rate to apply on all the traces
+# This sample rate is combined to the sample rate from the sampler logic, still promoting interesting traces
+# From 1 (no extra rate) to 0 (don't sample at all)
+# extra_sample_rate: 1
+
+# Maximum number of traces per second to sample.
+# The limit is applied over an average over a few minutes ; much bigger spikes are possible.
+# Set to 0 to disable the limit.
+# max_traces_per_second: 10
+
+# [trace.ignore]
+
+# Blacklist of regular expressions can be provided to disable certain traces based on their resource name
+# all entries must be surrounded by double quotes and separated by commas
+# Example: "(GET|POST) /healthcheck","GET /V1"
+# resource:
