--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 
+services:
+  - docker
+
 branches:
   only:
     - master
@@ -35,7 +38,7 @@ matrix:
   include:
     - python: 2.7
       sudo: required
-      services: docker
+      dist: trusty
       env: TRAVIS_FLAVOR=core_integration
 
 # Override travis defaults with empty jobs
